--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
             <h2>Upgrades</h2>
             <button id="hire-viking">Hire Viking (100 Gold)</button>
         </div>
+        <div id="settlements">
+            <h2>Settlements</h2>
+            <button id="build-settlement">Build Settlement (200 Wood, 100 Stone)</button>
+        </div>
+        <div id="buildings">
+            <h2>Buildings</h2>
+            <button id="build-farm">Build Farm (50 Wood, 20 Stone)</button>
+        </div>
     </div>
     <script src="node_modules/melonjs/dist/melonjs.js"></script>
     <script src="main.js"></script>
